<resources>
    <string name="app_name">Consultant Assistant</string>
    <string-array name="user_levels_array">
        <item>VIP</item>
        <item>Retail customer</item>
        <item>Interested person</item>
        <item>Partner</item>
        <item>Interested partner</item>
    </string-array>
    <string-array name="hair_colors">
        <item>Blond hair</item>
        <item>Platinum hair</item>
        <item>Brown hair</item>
        <item>Black hair</item>
        <item>Red hair</item>
        <item>Gray hair</item>
    </string-array>
    <string-array name="yes_no_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="hair_washing_frequency">
        <item>Daily</item>
        <item>Every 2 days</item>
        <item>Every 3 days</item>
        <item>Once a week</item>
    </string-array>
    <string name="hair_condition">Hair condition</string>
    <string-array name="types_of_hair">
        <item>With a tendency to curl</item>
        <item>Straight</item>
    </string-array>
    <string-array name="hair_related_routine">
        <item>None</item>
        <item>Often dried with a dryer</item>
        <item>Straightened with a straightener</item>
        <item>Curly on a curler</item>
    </string-array>
    <string-array name="type_of_products_spinner_list">
        <item>Customer products</item>
        <item>Proposed products</item>
        <item>Product samples</item>
    </string-array>
    <string-array name="products_section_1">
        <item>REJUVENIQE Oil Intensive</item>
        <item>REJUVENIQE LIGHT by Monat</item>
        <item>REJUVABEADS</item>
        <item>LASH &amp; BROW enhancing serum</item>
    </string-array>
    <string-array name="products_section_2">
        <item>RENEW Shampoo</item>
        <item>REPLENISH Masque</item>
        <item>RESTORE leave in conditioner</item>
    </string-array>
    <string-array name="products_section_3">
        <item>REVIVE Shampoo</item>
        <item>REVITALIZE Conditioner</item>
        <item>RESHAPE root lifter</item>
    </string-array>
    <string-array name="products_section_4">
        <item>INTENSE REPAIR Shampoo</item>
        <item>INTENSE REPAIR Conditioner</item>
        <item>INTENSE REPAIR Treatment</item>
    </string-array>
    <string-array name="products_section_5">
        <item>SMOOTHING Shampoo</item>
        <item>SMOOTHING DEEP Conditioner</item>
    </string-array>
    <string-array name="products_section_6">
        <item>SUPER MOISTURE Masque</item>
    </string-array>
    <string-array name="products_section_7">
        <item>ADVANCED HYDRATING Shampoo</item>
        <item>ADVANCED HYDRATING Conditioner</item>
        <item>DOUBLE ACTION HYDRATING serum</item>
        <item>HEAVENLY HYDRATING Masque</item>
    </string-array>
    <string-array name="products_section_8">
        <item>RESTRUCTURING pre-wash conditioner</item>
        <item>RESTRUCTURING Shampoo</item>
        <item>HAIR TRANSFORMATION Masque</item>
        <item>INNER FORCE RESTRUCTURING serum</item>
    </string-array>
    <string-array name="products_section_9">
        <item>MONAT BLACK 2 in 1 Shampoo &amp; Conditioner</item>
        <item>MONAT BLACK Beard oil</item>
    </string-array>
    <string-array name="products_section_10">
        <item>BLOW OUT Cream</item>
        <item>REFINISH CONTROL Hairspray</item>
        <item>THE CHAMP Conditioning dry shampoo</item>
        <item>THERMAL PROTECT Styling shield</item>
        <item>FRIZZ-FIX SMOOTHING HAIR PRIMER</item>
        <item>CURL DEFINING CREAM</item>
        <item>STRONG FLEXI-HOLD HAIRSPRAY</item>
        <item>DRY TEXTURIZING SPRAY</item>
        <item>UNKNOT DETANGLER</item>
        <item>THICKENING SPRAY</item>
        <item>COLOR LOCKING + PROTECTIVE SPRAY</item>
    </string-array>
    <string-array name="products_section_11">
        <item>SUPER NOURISH Oil creme shampoo</item>
        <item>SUPER NOURISH Oil creme conditioner</item>
    </string-array>
    <string-array name="products_section_12">
        <item>COLOUR ENHANCE BLONDE shampoo</item>
        <item>COLOUR ENHANCE BLONDE conditioner</item>
        <item>COLOUR ENHANCE PLATINUM shampoo</item>
        <item>COLOUR ENHANCE PLATINUM conditioner</item>
        <item>COLOUR ENHANCE BRUNETTE shampoo</item>
        <item>COLOUR ENHANCE BRUNETTE conditioner</item>
    </string-array>
    <string-array name="products_section_13">
        <item>JUNIOR GENTLE Shampoo</item>
        <item>JUNIOR GENTLE Conditioner</item>
        <item>JUNIOR GENTLE Detangler</item>
    </string-array>
    <string-array name="products_section_14">
        <item>CLARIFYING shampoo</item>
    </string-array>
    <string-array name="products_section_15">
        <item>OFY Micellar soothing shampoo</item>
        <item>OFY Gloss finishing spray</item>
        <item>OFY Flexible Hold Gel</item>
    </string-array>
    <string-array name="products_section_16">
        <item>Makeup Vanishing Balm</item>
        <item>Be Gentle Creamy Cleanser</item>
        <item>Be Gentle Nourishing Moisturizer</item>
        <item>Be Balanced Foamy Cleanser</item>
        <item>Be Balanced Lightweight Moisturizer</item>
        <item>Berry Refined Scrub</item>
        <item>Skin Revitalizing Essence</item>
        <item>C. Radiance Illuminating Serum</item>
        <item>Rewind Age Control Nectar</item>
        <item>Eye Smooth</item>
        <item>30 Second Miracle Instant Perfector</item>
        <item>Night Haven Overnight Age Control Cream</item>
    </string-array>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="email_hint">Enter an email</string>
    <string name="password_hint">Enter a password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_your_new_password">Confirm a new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_new_account_label">Don\'t have an account yet? Sign up <u>here</u>.</string>
    <string name="register_a_new_account_label">Register\na new account</string>
    <string name="sign_up_title">Register</string>
    <string name="already_have_an_account_label">Do you have an account already? Login <u>here</u>.</string>
    <string name="this_user_already_exists_toast">This user already exists</string>
    <string name="log_out_confirmation">You have successfully logged out</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="account_successfully_registered">Account has been successfully registered</string>
    <string name="welcome_message">Welcome! &#128521;</string>
    <string name="user_not_found">That account doesn\'t exist</string>
    <string name="user_disabled">This account has been disabled</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="email_already_verified">This email is already verified</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="verification_send_to">Verification email has been sent to %1$s</string>
    <string name="email_badly_formatted">The email address is badly formatted.</string>
    <string name="password_too_weak">The given password is too weak (minimum 6 characters)</string>
    <string name="password_invalid_or_not_existing">The password is invalid</string>
    <string name="field_can_not_be_empty">Field can\'t be empty</string>
    <string name="log_out">Log out</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="menu_delete_person_text">Remove %1$s %2$s</string>
    <string name="menu_edit_person_text">Edit %1$s %2$s</string>
    <string name="menu_delete_person_success_text">Successfully removed %1$s %2$s</string>
    <string name="hair_color">Hair color</string>
    <string name="dyed_hair">Dyed hair</string>
    <string name="type_of_hair">Type of hair</string>
    <string name="wash_frequency">Washing frequency</string>
    <string name="routine_activities">Routine activities</string>
    <string name="termo_protection_needed">Thermal protection</string>
    <string name="purpose_of_the_treatment">Purpose of the treatment</string>
    <string name="other_comments">Other comments</string>
    <string name="section_details_empty_view_text">No details about the client</string>
    <string name="section_gallery_header_title">%1$s %2$s - gallery</string>
    <string name="section_gallery_empty_view_text">Add photos from the photo gallery</string>
    <string name="section_products_header_title">%1$s %2$s - products</string>
    <string name="section_products_empty_view_text">No products</string>
    <string name="name_edit_text_hint">Name</string>
    <string name="name_edit_text_label_text">Name</string>
    <string name="surname_edit_text_hint">Surname</string>
    <string name="surname_edit_text_label_text">Surname</string>
    <string name="customer_level_spinner_label_text">Client level</string>
    <string name="customers_empty_view_text">Add new customers with the button\nin the bottom right corner</string>
    <string name="customer_added_successfully_text">New customer has been successfully added</string>
    <string name="menu_search_title">Search</string>
    <string name="email_edit_text_hint">Email address</string>
    <string name="email_label_text">Email</string>
    <string name="menu_action_edit_title">Edit</string>
    <string name="menu_action_add_new_photo_title">Add a photo</string>
    <string name="toast_message_saved">Saved</string>
    <string name="login_welcome_text">Log in\nto the assistant</string>
    <string name="notifications_channel_id">partner_assistant_channel_id</string>
    <string name="home_recycler_view_item_action_edit_title">Edit</string>
    <string name="home_recycler_view_item_action_delete">Remove</string>
    <string name="fragment_details_title">Client</string>
    <string name="fragment_products_title">Products</string>
    <string name="fragment_gallery_title">Gallery</string>
    <string name="gallery_menu_action_delete_title">Remove</string>
    <string name="intent_image_chooser_title">Choose a photo</string>
    <string name="name_input_error_message">The name field cannot be empty</string>
    <string name="surname_input_error_message">The surname field cannot be empty</string>
    <string name="email_input_wrong_format_error_message">The email address has the wrong format</string>
    <string name="image_upload_success_toast_message">Photo has been successfully uploaded</string>
    <string name="image_upload_error_toast_message">Photo upload failed</string>
    <string name="menu_notification_title">Add a reminder</string>
    <string name="purchase_successful_text">The subscription has been activated. You can log in or create an account</string>
    <string name="purchase_pending_text">Purchase pending</string>
    <string name="purchase_unspecified_state_text">Something went wrong. Please try again</string>
    <string name="billing_subscription_not_active_toast">Please activate a subscription to gain access</string>
    <string name="permission_request_denied_text">Permission denied</string>
    <string name="alert_dialog_delete_customer_title">Are you sure you want to delete %1$s %2$s?</string>
    <string name="alert_dialog_button_positive_text">Yes</string>
    <string name="alert_dialog_button_negative_text">No</string>
    <string name="menu_sort_title">Sort the list</string>
    <string name="menu_action_sort_alphabetically_title">Alphabetically</string>
    <string name="menu_action_sort_by_customer_level_title">By customer level</string>
    <string name="menu_stye_mode_title">Night mode</string>
</resources>