<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_sign_out"
        android:orderInCategory="103"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications"
        android:orderInCategory="101"
        android:title="@string/menu_notification_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/menu_search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="102"
        android:title="@string/menu_sort_title"
        app:showAsAction="never">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_action_sort_alphabetically"
                    android:title="@string/menu_action_sort_alphabetically_title" />
                <item
                    android:id="@+id/menu_action_sort_by_customer_level"
                    android:title="@string/menu_action_sort_by_customer_level_title" />
            </group>

        </menu>

    </item>

</menu>