<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hair_color"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hair_color_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/hair_colors"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/dyed_hair"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/dyed_hair_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/yes_no_array"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/type_of_hair"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/type_of_hair_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/types_of_hair"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/wash_frequency"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/washing_frequency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/hair_washing_frequency"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/hair_condition"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hair_condition_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/hair_condition"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/routine_activities"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/hair_related_routine_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/hair_related_routine"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/termo_protection_needed"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/termo_protection_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/yes_no_array"
        android:spinnerMode="dropdown"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/purpose_of_the_treatment"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/treatment_details_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/other_comments"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/more_details_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

</LinearLayout>